some fixes with fonts and aligning of list elements

--- a/src/components/MainBody/AboutTemplate/AboutTemplateScoreList/about-template-score-list.scss
+++ b/src/components/MainBody/AboutTemplate/AboutTemplateScoreList/about-template-score-list.scss
@@ -1,2 +1,5 @@
 .about-template-score-list {
+    & ul {
+        margin-top: 2rem;
+    }
 }
